Updated the footer wrapping issue

--- a/main.css
+++ b/main.css
@@ -53,8 +53,8 @@ body{
   padding-left: 70%;
   font-size: 15px;
   padding-top: 15px;
-  
-
+  font-size: 12px;
+  white-space: nowrap;
 }
 
 
